# hello_ndk

./: ReadMe.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/hellondk/: MainActivity.java  Message.java  MsgAdapter.java
app/src/main/res/drawable/: msg_shape.xml  send_msg_shape.xml
app/src/main/res/layout/: activity_main.xml  msg_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
